--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,10 @@
 </head>
 <body>
 
-<%# <%= yield %1> %>
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12">
-        <div id="app"></div>
+        <%=yield%>
       </div>
     </div>
   </div>
