--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,14 @@
  *= require_self
  */
 
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .layer-template {
     display: none;
 }
@@ -137,8 +145,4 @@
     bottom: -11px;
     right: 2px;
     text-align: right;
-}
-
-.thumbpad {
-    position: relative;
 }
