Working post/put with json

--- a/app/views/keyboard_layouts/edit.html.erb
+++ b/app/views/keyboard_layouts/edit.html.erb
@@ -1,4 +1,8 @@
-<%= form_tag(keyboard_layout_url(1), method: "put") do %>
+<% if false %>
+  <%= form_tag(keyboard_layout_url(1), method: "put") do %>
+      <%= react_component('App') %>
+      <%= hidden_field_tag(:layout) %>
+  <% end %>
+<% else %>
     <%= react_component('App') %>
-    <%= hidden_field_tag(:layout) %>
 <% end %>
