--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,13 @@
 <html>
 <head>
   <title>FusionRails</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12">
-        <%=yield%>
-      </div>
+  <div class="wrap">
+    <%=yield%>
     </div>
   </div>
 
